<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >
    <EditText
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/enter_name">

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/editapi"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/enter_api"
        android:inputType="textMultiLine"
        android:minLines="5" >
    </EditText>

    <EditText
        android:id="@+id/editvarid"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/enter_varid"
        android:inputType="textMultiLine"
        android:minLines="5" >
    </EditText>
    <Spinner
        android:id="@+id/edittype"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:entries="@array/arrays"
        android:prompt="@string/enter_deviceType" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editstate">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_state_on"
            android:id="@+id/editon"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_state_off"
            android:id="@+id/editoff"
            android:layout_gravity="center_horizontal"/>

    </RadioGroup>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_delete" />
    </LinearLayout>

</LinearLayout>